fixed broken links on home page and added more limited products tabs

--- a/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
+++ b/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
@@ -84,7 +84,7 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-Femodel.png"
+              src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Femodel-Blue.png"
               class="img-large"
               alt="nightwolf hoodie"
             />
@@ -92,26 +92,38 @@
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-Femodel.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Femodel-Blue.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-frontView.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-FrontView-blue.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch//FerralWolf/Hats/LE-FerralWolf-Cap-leftView.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Mamodel-blue.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-rightView.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Femodel.png"
                 class="img-small"
+              />
+            </span>
+            <span class="collage-block">
+              <img
+                class="img-small"
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-FrontView.png"
+              />
+            </span>
+            <span class="collage-block block-middle-1">
+              <img
+                class="img-small"
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Mamodel.png"
               />
             </span>
           </div>
@@ -119,14 +131,12 @@
         <span class="product-details">
           <h1 class="product-head small-prod-head">
             <strong class="fancy">Limited Edition</strong>
-            FerralWolf Dad Cap
+            N1ghtW0lf04 Cap
           </h1>
           <p class="product-info">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
-            consequuntur, earum in neque consequatur tempore est unde eligendi
-            repellat, sit incidunt soluta nobis mollitia rem. Vitae magnam
-            dolorem illum labore? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit.
+            This Cap has N1ghtW0lf04's Unofficial new logo. Designed by
+            N1ghtW0lf04 himself to make you "Look cool af". maybe the sales for
+            these L.E clothes might help him make the decision to change logo.
           </p>
 
           <span class="available-colours position-blocks block-margin">
@@ -158,7 +168,7 @@
                 </span>
 
                 <span class="pricing">
-                  <p class="original-price">£29.99</p>
+                  <p class="original-price">£34.99</p>
                   <p class="sale-price">£24.99</p>
                 </span>
               </div>
@@ -179,6 +189,7 @@
                         <option>S</option>
                         <option>M</option>
                         <option>L</option>
+                        <option>XL</option>
                       </select>
                     </div>
                     <div class="clothes-quantity-label">
@@ -271,15 +282,16 @@
                 <span class="feature-titles">
                   <h4 class="feature-head">Premium quality</h4>
                   <p class="feature-text">
-                    This cap comes with a curved visor to help block the sun
-                    during summer
+                    This Jumper is made from i high quality cotton to keep you
+                    warm and comfortable.
                   </p>
                 </span>
 
                 <span class="feature-titles">
-                  <h4 class="feature-head">Premuim Fact</h4>
+                  <h4 class="feature-head">Tag Tear</h4>
                   <p class="feature-text">
-                    This cap seems to be one of our best selling items yet.
+                    The tags that come on this jumper can be easily removed for
+                    your convenience.
                   </p>
                 </span>
               </div>
