--- a/Home.html
+++ b/Home.html
@@ -163,7 +163,7 @@
     </section>
     <section class="Body-content">
       <div class="Merch-header">
-        <h2 class="heading-secondary">Our best sellers!</h2>
+        <h2 class="heading-secondary">Our Products!</h2>
       </div>
       <div class="Merch-grid">
         <div class="Product-tab">
@@ -204,7 +204,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/N1ghtW0lf04.html"
+                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04.html"
                 class="product-page-link"
                 >More Info</a
               >
@@ -254,7 +254,7 @@
               </div>
             </form>
             <span>
-              <p class="Limited Warning-banner-limited">Limited Stock!</p>
+              <p class="Limited Warning-banner-limited">Eco-Friendly</p>
             </span>
           </div>
         </div>
@@ -296,7 +296,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/jellbelly-classic-eco-hoodie.html"
+                href="/HTML/Products/JellyBellyYT/Hoodies/jellbelly-classic-eco-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
@@ -346,7 +346,7 @@
               </div>
             </form>
             <span>
-              <p class="Deals Warning-banner-deals">Great Deal!</p>
+              <p class="Deals Warning-banner-deals">Eco-Friendly</p>
             </span>
           </div>
         </div>
@@ -388,7 +388,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/Ferralwolf2003-eco-hoodie.html"
+                href="/HTML/Products/FerralWolf/Hoodies/Ferralwolf2003-eco-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
@@ -438,7 +438,7 @@
               </div>
             </form>
             <span>
-              <p class="exclusive Warning-banner-limited">Exlusive!</p>
+              <p class="exclusive Warning-banner-limited">Eco-Friendly</p>
             </span>
           </div>
         </div>
@@ -480,7 +480,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/sis-squad-team-hoodie.html"
+                href="/HTML/Products/Team/Hoodies/sis-squad-team-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
