--- a/HTML/All.html
+++ b/HTML/All.html
@@ -241,12 +241,12 @@
         <div class="product-grid">
           <div class="Product-tab all-tab-size">
             <img
-              src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-front-modelled-jumper.png"
+              src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Mamodel-blue.png"
               class="product-image"
               alt="hoodie"
             />
             <div class="tab-header">
-              <p class="product-header-size">N1ghtW0lf04 Jumper</p>
+              <p class="product-header-size">N1ghtW0lf04 Cap</p>
               <span class="available-colours position-blocks">
                 <div class="coloured-blocks black-block"></div>
                 <div class="coloured-blocks white-block"></div>
@@ -276,12 +276,12 @@
                   </span>
 
                   <span class="pricing">
-                    <p class="original-price">£44.99</p>
-                    <p class="sale-price">£29.99</p>
+                    <p class="original-price">£34.99</p>
+                    <p class="sale-price">£24.99</p>
                   </span>
                   <span class="product-page-links">
                     <a
-                      href="/HTML/Products/N1ghtW0lf04/Jumpers/LE-NW-JP1.html"
+                      href="/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html"
                       class="product-page-link"
                       >More Info</a
                     >
@@ -441,7 +441,6 @@
               </div>
             </div>
           </div>
-
           <div class="Product-tab all-tab-size">
             <img
               src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-Femodel.png"
@@ -542,7 +541,107 @@
               </div>
             </div>
           </div>
+          <div class="Product-tab all-tab-size">
+            <img
+              src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-front-modelled-jumper.png"
+              class="product-image"
+              alt="hoodie"
+            />
+            <div class="tab-header">
+              <p class="product-header-size">N1ghtW0lf04 Jumper</p>
+              <span class="available-colours position-blocks">
+                <div class="coloured-blocks black-block"></div>
+                <div class="coloured-blocks white-block"></div>
+                <div class="coloured-blocks red-block"></div>
+              </span>
+            </div>
+            <div class="Product-description">
+              <div class="prod-content-grid">
+                <div class="prod-info">
+                  <span class="shipping shipping-column">
+                    <svg
+                      class="lorrie"
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="w-6 h-6"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+                      />
+                    </svg>
+                    <p class="free">Free Shipping</p>
+                  </span>
 
+                  <span class="pricing">
+                    <p class="original-price">£44.99</p>
+                    <p class="sale-price">£29.99</p>
+                  </span>
+                  <span class="product-page-links">
+                    <a
+                      href="/HTML/Products/N1ghtW0lf04/Jumpers/LE-NW-JP1.html"
+                      class="product-page-link"
+                      >More Info</a
+                    >
+                  </span>
+                </div>
+                <div class="prod-payment">
+                  <form class="product-form">
+                    <div class="form-grid">
+                      <div class="clothes-sizing-label">
+                        <label class="product-label size-label" for="Sizes"
+                          >Sizes</label
+                        >
+                      </div>
+                      <div class="clothes-sizing-select">
+                        <select
+                          required
+                          name="Sizes"
+                          class="product-input sizes-input"
+                        >
+                          <option>S</option>
+                          <option>M</option>
+                          <option>L</option>
+                          <option>XL</option>
+                        </select>
+                      </div>
+                      <div class="clothes-quantity-label">
+                        <label
+                          for="quantity"
+                          class="product-label quantity-label"
+                          >Quantity</label
+                        >
+                      </div>
+                      <div class="clothes-quantity-input">
+                        <input
+                          required
+                          type="number"
+                          class="product-input quantity"
+                          name="quantity"
+                          min="1"
+                          max="10"
+                          value="1"
+                        />
+                      </div>
+                    </div>
+                    <div class="product-btn">
+                      <button class="cart-btn">
+                        <ion-icon name="cart-outline"></ion-icon>
+                        Add to cart
+                      </button>
+                    </div>
+                  </form>
+                </div>
+                <div class="Popular-banner Limited-banner">
+                  <p class="Popular-text Limited-text">Limited</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="Product-tab all-tab-size">
             <img
               src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
@@ -955,6 +1054,22 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="All-pagination">
+        <ion-icon class="pagination-icon" name="caret-back-outline"></ion-icon>
+        <span class="pagination-buttons">
+          <button class="pagination-btn">1</button>
+          <button class="pagination-btn">2</button>
+          <button class="pagination-btn">3</button>
+          <button class="dead-pagination">...</button>
+          <button class="pagination-btn">8</button>
+          <button class="pagination-btn">9</button>
+          <button class="pagination-btn double-digi-pag">10</button>
+        </span>
+        <ion-icon
+          class="pagination-icon"
+          name="caret-forward-outline"
+        ></ion-icon>
       </div>
     </section>
     <footer class="footer">
