tested PDP images being clickable and creates bit preview - works

--- a/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
+++ b/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Carattere&display=swap"
       rel="stylesheet"
     />
+    <link href="/Style/Page styles/PDP/N1ghtW0lf/LE-cap.css" rel="stylesheet" />
     <title>S-I-S SQUAD</title>
   </head>
   <body>
@@ -80,47 +81,49 @@
       <div class="product-info-grid">
         <div class="Product-images">
           <div class="Product-img-large">
-            <img
-              src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Femodel-Blue.png"
-              class="img-large"
-              alt="nightwolf hoodie"
-            />
+            <div id="img-large" class="base-image"></div>
           </div>
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Femodel-Blue.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel-Blue.jpg"
                 class="img-small"
+                id="fem-blue"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-FrontView-blue.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-FrontView-blue.jpg"
                 class="img-small"
+                id="front-blue"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Mamodel-blue.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel-blue.jpg"
                 class="img-small"
+                id="man-blue"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Femodel.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel.jpg"
                 class="img-small"
+                id="fem-grey"
               />
             </span>
             <span class="collage-block">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-FrontView.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-FrontView.jpg"
+                id="front-grey"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-Cap-Mamodel.png"
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel.jpg"
+                id="man-grey"
               />
             </span>
           </div>
@@ -341,6 +344,8 @@
         </div>
       </span>
     </footer>
+
+    <script src="/JavaScript/PDP-Images.js"></script>
     <script src="/Script.js"></script>
     <script
       type="module"
