fixed ccs links in html

--- a/HTML/Header-links/All.html
+++ b/HTML/Header-links/All.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Style/Page styles/Banner&Footer.css" rel="stylesheet" />
-    <link href="/Style/Page styles/All-Products.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/Banner&Footer.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/Style/Page styles/Banner-links/All-Products.css"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -245,7 +251,7 @@
             <div class="tab-header">
               <p class="product-header-size">N1ghtW0lf04 Cap</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
+                <div class="coloured-blocks blue-block"></div>
                 <div class="coloured-blocks white-block"></div>
                 <div class="coloured-blocks red-block"></div>
               </span>
@@ -682,7 +688,7 @@
                   </span>
                   <span class="product-page-links">
                     <a
-                      href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04.html"
+                      href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html"
                       class="product-page-link"
                       >More Info</a
                     >
