--- a/HTML/Products/JellyBellyYT/Hats/midge-LE-Bucket-hat.html
+++ b/HTML/Products/JellyBellyYT/Hats/midge-LE-Bucket-hat.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Style/Page styles/Banner&Footer.css" rel="stylesheet" />
-    <link href="/Style/Page styles/All-Products.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/Banner&Footer.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/Style/Page styles/Banner-links/All-Products.css"
+      rel="stylesheet"
+    />
     <link href="/Style/Active/Active.css" rel="stylesheet" />
     <link
       rel="icon"
@@ -80,7 +86,7 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-Femodel.png"
+              src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-Femodel.jpg"
               class="img-large"
               alt="nightwolf hoodie"
             />
@@ -88,25 +94,25 @@
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-Femodel.png"
+                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-Femodel.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-Mamodel.png"
+                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-Mamodel.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-front.png"
+                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-front.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-side.png"
+                src="/Images/Merch/JellyBelly/Hats/LE-Midge-Bucket-hat-side.jpg"
                 class="img-small"
               />
             </span>
