--- a/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
+++ b/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Style/Page styles/Banner&Footer.css" rel="stylesheet" />
-    <link href="/Style/Page styles/All-Products.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/Banner&Footer.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/Style/Page styles/Banner-links/All-Products.css"
+      rel="stylesheet"
+    />
     <link href="/Style/Active/Active.css" rel="stylesheet" />
     <link
       rel="icon"
@@ -22,7 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Carattere&display=swap"
       rel="stylesheet"
     />
-    <link href="/Style/Page styles/PDP/N1ghtW0lf/LE-cap.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/PDP/N1ghtW0lf/NW-PRODS.css"
+      rel="stylesheet"
+    />
     <title>S-I-S SQUAD</title>
   </head>
   <body>
@@ -81,49 +90,49 @@
       <div class="product-info-grid">
         <div class="Product-images">
           <div class="Product-img-large">
-            <div id="img-large" class="base-image"></div>
+            <div id="img-large" class="LE-NW-base-image-hat"></div>
           </div>
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel-Blue.jpg"
                 class="img-small"
-                id="fem-blue"
+                id="LE-NW-fem-blue"
               />
             </span>
             <span class="collage-block">
               <img
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-FrontView-blue.jpg"
                 class="img-small"
-                id="front-blue"
+                id="LE-NW-front-blue"
               />
             </span>
             <span class="collage-block">
               <img
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel-blue.jpg"
                 class="img-small"
-                id="man-blue"
+                id="LE-NW-man-blue"
               />
             </span>
             <span class="collage-block">
               <img
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel.jpg"
                 class="img-small"
-                id="fem-grey"
+                id="LE-NW-fem-grey"
               />
             </span>
             <span class="collage-block">
               <img
                 class="img-small"
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-FrontView.jpg"
-                id="front-grey"
+                id="LE-NW-front-grey"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small"
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel.jpg"
-                id="man-grey"
+                id="LE-NW-man-grey"
               />
             </span>
           </div>
@@ -140,7 +149,7 @@
           </p>
 
           <span class="available-colours position-blocks block-margin">
-            <div class="coloured-blocks black-block"></div>
+            <div class="coloured-blocks blue-block"></div>
             <div class="coloured-blocks White-block"></div>
             <div class="coloured-blocks Grey-block"></div>
           </span>
