--- a/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html
+++ b/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Style/Page styles/Banner&Footer.css" rel="stylesheet" />
-    <link href="/Style/Page styles/All-Products.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/Banner&Footer.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/Style/Page styles/Banner-links/All-Products.css"
+      rel="stylesheet"
+    />
     <link href="/Style/Active/Active.css" rel="stylesheet" />
     <link
       rel="icon"
@@ -74,7 +80,7 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
+              src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.jpg"
               class="img-large"
               alt="nightwolf hoodie"
             />
@@ -82,56 +88,56 @@
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0LF04 SIDE SHOT.png"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0LF04 SIDE SHOT.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/side shot 2.png"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/side shot 2.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie front model.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie front model.jpg"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back model.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back model.jpg"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back flat.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back flat.jpg"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtWolf04 hoodie front flat.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtWolf04 hoodie front flat.jpg"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/night side white.png"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/night side white.jpg"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/white side night.png"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/white side night.jpg"
               />
             </span>
           </div>
