--- a/Home.html
+++ b/Home.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Style/Page styles/All-Products.css" rel="stylesheet" />
-    <link href="Style/Page styles/Home.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/All-Products.css"
+      rel="stylesheet"
+    />
+    <link href="Style/Page styles/Banner-links/Home.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link href="/Style/Page styles/Banner&Footer.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/Banner&Footer.css"
+      rel="stylesheet"
+    />
 
     <link
       rel="icon"
@@ -204,7 +210,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04.html"
+                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
