--- a/HTML/Products/JellyBellyYT/Hoodies/jellbelly-classic-eco-hoodie.html
+++ b/HTML/Products/JellyBellyYT/Hoodies/jellbelly-classic-eco-hoodie.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Style/Page styles/Banner&Footer.css" rel="stylesheet" />
-    <link href="/Style/Page styles/All-Products.css" rel="stylesheet" />
+    <link
+      href="/Style/Page styles/Banner-links/Banner&Footer.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/Style/Page styles/Banner-links/All-Products.css"
+      rel="stylesheet"
+    />
     <link href="/Style/Active/Active.css" rel="stylesheet" />
     <link
       rel="icon"
