added JS to NW PDP and resized images

--- a/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
+++ b/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
@@ -90,7 +90,7 @@
       <div class="product-info-grid">
         <div class="Product-images">
           <div class="Product-img-large">
-            <div id="img-large" class="LE-NW-base-image-hat"></div>
+            <div id="img-large" class="LE-NW-base-image-hat LE-NW-CAP"></div>
           </div>
           <div class="Product-img-collage">
             <span class="collage-block">
@@ -354,7 +354,7 @@
       </span>
     </footer>
 
-    <script src="/JavaScript/PDP-Images.js"></script>
+    <script src="/JavaScript/NW-PDPHat-Images.js"></script>
     <script src="/Script.js"></script>
     <script
       type="module"
