--- a/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html
+++ b/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html
@@ -13,6 +13,10 @@
     />
     <link href="/Style/Active/Active.css" rel="stylesheet" />
     <link
+      href="/Style/Page styles/PDP/N1ghtW0lf/NW-PRODS.css"
+      rel="stylesheet"
+    />
+    <link
       rel="icon"
       type="image/png"
       sizes="32x32"
@@ -79,65 +83,70 @@
       <div class="product-info-grid">
         <div class="Product-images">
           <div class="Product-img-large">
-            <img
-              src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.jpg"
-              class="img-large"
-              alt="nightwolf hoodie"
-            />
+            <div id="img-large" class="NW-baseHoodie-img NW-Hoodie"></div>
           </div>
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodie.jpg"
                 class="img-small"
+                id="NW-grey-front"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0LF04 SIDE SHOT.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodieGrey-Left.jpg"
                 class="img-small"
+                id="NW-grey-sideLeft"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/side shot 2.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0LF04-grey-right.jpg"
                 class="img-small"
+                id="NW-grey-sideRight"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie front model.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodie-front-model.jpg"
                 class="img-small"
+                id="NW-black-front"
               />
             </span>
             <span class="collage-block">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back model.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodie-back-model.jpg"
+                id="NW-black-back"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back flat.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodie-back-flat.jpg"
+                id="NW-black-flatBack"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtWolf04 hoodie front flat.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtWolf04-hoodieBlack-frontFlat.jpg"
+                id="NW-black-flatFront"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/night side white.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodieWhite-Right.jpg"
+                id="NW-white-sideRight"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Hoodie/white side night.jpg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/PDP/N1ghtW0lf04-hoodiewhite-Left.jpg"
+                id="NW-white-sideLeft"
               />
             </span>
           </div>
@@ -316,7 +325,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="/Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
@@ -351,6 +364,7 @@
         </div>
       </span>
     </footer>
+    <script src="/JavaScript/NW-PDPHoodie-Images.js"></script>
     <script src="/Script.js"></script>
     <script
       type="module"
